@@ -1,3 +1,8 @@
+2006-09-16  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* doc/en/dcwaterdesign.xml: Switched from article to chapter;
+	added dc_id tutorial; added quality control tutorial
+
 2006-08-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* doc/en/dcwaterdesign.xml:
